fix the pathfile of the navbar logo

--- a/features-report.html
+++ b/features-report.html
@@ -157,24 +157,29 @@
                     such as the time feature and contact form functionality etc.
                 </p>
                 <p>
-                    The website is hosted through <strong>Vercel</strong>, ensuring fast deployment and easy access for users. All project files, including HTML, CSS, and JavaScript, are managed and stored in a <strong>GitHub repository</strong> for version control and collaboration.
+                    The website is hosted through <strong>Vercel</strong>, ensuring fast deployment and easy access for
+                    users. All project files, including HTML, CSS, and JavaScript, are managed and stored in a
+                    <strong>GitHub repository</strong> for version control and collaboration.
                 </p>
                 <p>
-                    View the live website here: 
-                    <a href="https://ricardo-danganan-portfolio-website.vercel.app/" target="_blank" rel="noopener noreferrer">
+                    View the live website here:
+                    <a href="https://ricardo-danganan-portfolio-website.vercel.app/" target="_blank"
+                        rel="noopener noreferrer">
                         Click here to visit my portfolio website
                     </a>.
                 </p>
                 <p>
-                    View the GitHub repository for this website here:  
-                    <a href="https://github.com/ricardodanganan/portfolio-website" target="_blank" rel="noopener noreferrer">
+                    View the GitHub repository for this website here:
+                    <a href="https://github.com/ricardodanganan/portfolio-website" target="_blank"
+                        rel="noopener noreferrer">
                         Click here to view the GitHub repo
                     </a>.
                 </p>
                 <p>
-                    View the Vercel Production Deployment here:  
-                    <a href="https://vercel.com/ricardodanganans-projects/portfolio-website" target="_blank" rel="noopener noreferrer">
-                        Click here to view the Vercel Production Deployment 
+                    View the Vercel Production Deployment here:
+                    <a href="https://vercel.com/ricardodanganans-projects/portfolio-website" target="_blank"
+                        rel="noopener noreferrer">
+                        Click here to view the Vercel Production Deployment
                     </a>.
                 </p>
             </article>
@@ -254,7 +259,7 @@
                         the day.</li>
                     <li><strong>Scroll-to-Top Button:</strong> Comes into view on dynamic scrolling. So this smoothly
                         scrolls the page to the top.</li>
-                    <li><strong>Background Music:</strong> Play background music automatically on load (with fallback
+                    <li><strong>Background Music:</strong> Play background music (with fallback
                         for broken browsers). An icon that toggles between play/pause, visually.</li>
                     <li><strong>Map Integration:</strong> Provides an interactive map integrated with fetch API in
                         OpenStreetMap that pinpoints my work experience location.</li>
@@ -325,7 +330,7 @@
         <img src="img/off-music-1.jpg" alt="Music Icon" class="music-icon">
     </div>
 
-    <audio id="backgroundMusic" autoplay loop>
+    <audio id="backgroundMusic" loop>
         <source src="img/persona.mp3" type="audio/mp4">
         Your browser does not support the audio element.
     </audio>
@@ -339,7 +344,7 @@
     <script src="js/journey.js"></script>
     <script src="js/aboutMe.js"></script>
     <script src="js/navbar.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/music.js"></script>
     <script src="js/hero.js"></script>
     <script src="js/skills.js"></script>
     <script src="js/contact.js"></script>
