--- a/index.html
+++ b/index.html
@@ -73,10 +73,11 @@
                 <a href="#work-section" class="navbar-nav-menu-item"><i class="fas fa-briefcase me-3"></i>Work and
                     Education</a>
                 <a href="#contact" class="navbar-nav-menu-item"><i class="fas fa-phone-alt me-3"></i>Contact Me</a>
-                <a href="features-report.html" class="navbar-nav-menu-item"><i class="fas fa-file-alt me-3"></i>Portfolio Features Report</a>
+                <a href="features-report.html" class="navbar-nav-menu-item"><i
+                        class="fas fa-file-alt me-3"></i>Portfolio Features Report</a>
             </div>
         </div>
-        <div id="navbar-overlay" onclick="closeMenu()"></div> 
+        <div id="navbar-overlay" onclick="closeMenu()"></div>
     </div>
     <!-- End of Navbar -->
 
@@ -1183,7 +1184,7 @@
         <img src="img/off-music-1.jpg" alt="Music Icon" class="music-icon">
     </div>
 
-    <audio id="backgroundMusic" autoplay loop>
+    <audio id="backgroundMusic" loop>
         <source src="img/persona.mp3" type="audio/mp4">
         Your browser does not support the audio element.
     </audio>
@@ -1197,7 +1198,7 @@
     <script src="js/journey.js"></script>
     <script src="js/aboutMe.js"></script>
     <script src="js/navbar.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/music.js"></script>
     <script src="js/hero.js"></script>
     <script src="js/skills.js"></script>
     <script src="js/contact.js"></script>
