updated my portfolio

--- a/index.html
+++ b/index.html
@@ -157,16 +157,14 @@
             </div>
             <div class="about-text scroll-element">
                 <p>
-                    I am a motivated computing student currently pursuing a degree in Computing with
-                    Information Technology Management at Technological University Dublin. With a strong foundation in
-                    web design, scripting, networking, server administration and cloud computing, I excel at tackling
-                    technical challenges
-                    and adapting to the ever-evolving ICT landscape.
+                    I am a motivated IT graduate with a degree in Computing with Information Technology Management from Technological University Dublin. 
+                    With hands-on experience in technical support, scripting, system monitoring, and cloud computing, 
+                    I enjoy building responsive web interfaces and solving real-world performance challenges.
                 </p>
                 <p>
-                    My strengths include teamwork, communication, and problem-solving,
-                    all of which drive my ability to contribute effectively in both academic and professional
-                    environments.
+                    I am highly adaptable, always eager to learn, and passionate about exploring new technologies. 
+                    My strengths include problem-solving, clear communication, 
+                    and teamwork, all of which help me contribute effectively in both academic and professional environments.
                 </p>
                 <div class="about-buttons">
                     <!-- Button to Trigger Hobbies Modal -->
@@ -256,10 +254,10 @@
                     <div class="col-md-5 scroll-element">
                         <h2 class="fw-bold text-dark mb-">I have high skills in IT Management and Development</h2>
                         <p class="text-muted">
-                            I specialize in creating secure, efficient, and visually appealing solutions. My expertise
-                            includes front-end development, scripting, cloud security, server administration, and
-                            networking. I am dedicated to providing professional, responsive, and multi-functional
-                            solutions.
+                            I specialize in building responsive, secure, and efficient systems that bridge front-end development with backend automation 
+                            and performance monitoring. My core skills include scripting, system optimization, server administration, cloud integration, 
+                            and network support. I'm passionate about using technology to solve real-world problems and always eager to learn and 
+                            adapt to new tools and innovations.
                         </p>
                     </div>
                     <!-- Right Column: Skills and Progress Bars -->
@@ -267,11 +265,11 @@
                         <!-- Scripting -->
                         <div class="skill-bar mb-4">
                             <div class="skill-header">
-                                <span class="skill-title">Scripting</span>
+                                <span class="skill-title">Scripting (PowerShell, Bash)</span>
                                 <span class="skill-percentage">0%</span>
                             </div>
                             <div class="progress-container">
-                                <div class="progress" data-progress="90"></div>
+                                <div class="progress" data-progress="82"></div>
                             </div>
                         </div>
                         <!-- Front-End Development -->
@@ -287,7 +285,7 @@
                         <!-- Server Administration -->
                         <div class="skill-bar mb-4">
                             <div class="skill-header">
-                                <span class="skill-title">Server Administration</span>
+                                <span class="skill-title">System Monitoring & Automation</span>
                                 <span class="skill-percentage">0%</span>
                             </div>
                             <div class="progress-container">
@@ -307,7 +305,7 @@
                         <!-- Cloud Security -->
                         <div class="skill-bar mb-4">
                             <div class="skill-header">
-                                <span class="skill-title">Cloud Security</span>
+                                <span class="skill-title">Cloud Technologies</span>
                                 <span class="skill-percentage">0%</span>
                             </div>
                             <div class="progress-container">
@@ -382,15 +380,20 @@
                                 <!-- Project 2 -->
                                 <div class="col-md-4 scroll-element">
                                     <div class="card">
-                                        <img src="img/JAVA-text-base-RPG-1.jpg" class="card-img-top"
-                                            alt="Java Text-Based RPG">
+                                        <img src="img/Game-Performance-Monitor-1.png" class="card-img-top"
+                                            alt="Performance Optimization">
                                         <div class="card-body text-center">
-                                            <h5 class="card-title my-3">Java Text-Based RPG</h5>
+                                            <h5 class="card-title my-3">IT Monitoring Dashboard</h5>
                                             <div class="technologies my-3">
-                                                <img src="img/java-logo.png" alt="Java" class="tech-logo">
+                                                <img src="img/powershell-logo.png" alt="PowerShell" class="tech-logo">
+                                                <img src="img/html-logo.png" alt="HTML" class="tech-logo">
+                                                <img src="img/css-logo.png" alt="CSS" class="tech-logo">
+                                                <img src="img/node-logo.png" alt="Node.js" class="tech-logo">
+                                                <img src="img/react-logo.png" alt="React.js" class="tech-logo">
+                                                <img src="img/Electron.png" alt="Electron.js" class="tech-logo">
                                             </div>
                                             <button type="button" class="education-timeline-button"
-                                                onclick="educationOpenModal('education-projectModal2')">Show
+                                                onclick="educationOpenModal('education-projectModal5')">Show
                                                 More</button>
                                         </div>
                                     </div>
@@ -440,19 +443,15 @@
                                 <!-- Project 5 -->
                                 <div class="col-md-4 scroll-element">
                                     <div class="card">
-                                        <img src="img/Game-Performance-Monitor-1.jpg" class="card-img-top"
-                                            alt="Performance Optimization">
+                                        <img src="img/JAVA-text-base-RPG-1.jpg" class="card-img-top"
+                                            alt="Java Text-Based RPG">
                                         <div class="card-body text-center">
-                                            <h5 class="card-title my-3">Performance Optimization</h5>
+                                            <h5 class="card-title my-3">Java Text-Based RPG</h5>
                                             <div class="technologies my-3">
-                                                <img src="img/powershell-logo.png" alt="PowerShell" class="tech-logo">
-                                                <img src="img/html-logo.png" alt="HTML" class="tech-logo">
-                                                <img src="img/css-logo.png" alt="CSS" class="tech-logo">
-                                                <img src="img/node-logo.png" alt="Node.js" class="tech-logo">
-                                                <img src="img/react-logo.png" alt="React.js" class="tech-logo">
+                                                <img src="img/java-logo.png" alt="Java" class="tech-logo">
                                             </div>
                                             <button type="button" class="education-timeline-button"
-                                                onclick="educationOpenModal('education-projectModal5')">Show
+                                                onclick="educationOpenModal('education-projectModal2')">Show
                                                 More</button>
                                         </div>
                                     </div>
@@ -608,8 +607,6 @@
                         <span class="badge bg-info text-dark">CSS</span>
                         <span class="badge bg-danger">HTML</span>
                         <span class="badge bg-dark">PowerShell</span>
-                        <span class="badge bg-warning">Supabase</span>
-                        <span class="badge bg-success">In Development</span>
                     </div>
                 </div>
             </div>
@@ -625,11 +622,10 @@
                 </div>
                 <div class="education-modal-body">
                     <p>
-                        This feature for my 4th-year project portfolio focuses on enhancing the gaming experience by
-                        leveraging
-                        system performance data to provide optimization recommendations. By using PowerShell scripts,
-                        the
-                        application collects hardware specifications, including CPU, GPU, RAM, and storage.
+                        This desktop application monitors system performance in real time and provides optimization suggestions for gaming. 
+                        It collects hardware data such as CPU, GPU, RAM, VRAM, and disk usage using PowerShell scripts and displays insights 
+                        through interactive charts. The system also integrates Steam and RAWG APIs and uses AI-generated recommendations to enhance 
+                        gameplay performance.
                     </p>
                     <div class="education-modal-badges">
                         <span class="badge bg-info text-dark">Node.js</span>
@@ -637,9 +633,12 @@
                         <span class="badge bg-info text-dark">CSS</span>
                         <span class="badge bg-danger">HTML</span>
                         <span class="badge bg-dark">PowerShell</span>
-                        <span class="badge bg-warning">Supabase</span>
-                        <span class="badge bg-success">In Development</span>
+                        <span class="badge bg-warning">SQLite</span>
+                        <span class="badge bg-secondary">Electron</span>
+                        <span class="badge bg-success">Azure Open AI</span>
                     </div>
+                    <a href="https://github.com/ricardodanganan/GamePerformanceMonitoring-Dashboard" target="_blank"
+                        class="education-timeline-button">View on GitHub</a>
                 </div>
             </div>
         </div>
@@ -670,8 +669,6 @@
                         <span class="badge bg-info text-dark">CSS</span>
                         <span class="badge bg-danger">HTML</span>
                         <span class="badge bg-dark">PowerShell</span>
-                        <span class="badge bg-warning">Supabase</span>
-                        <span class="badge bg-success">In Development</span>
                     </div>
                 </div>
             </div>
