--- a/index.html
+++ b/index.html
@@ -157,14 +157,14 @@
             </div>
             <div class="about-text scroll-element">
                 <p>
-                    I am a motivated IT graduate with a degree in Computing with Information Technology Management from Technological University Dublin. 
-                    With hands-on experience in technical support, scripting, system monitoring, and cloud computing, 
-                    I enjoy building responsive web interfaces and solving real-world performance challenges.
+                    I am an IT professional with a Bachelor of Science (Honours) in Computing in Information Technology Management from Technological University Dublin. 
+                    Currently working as an IT Logistics Associate at Meta (via EOS IT Solutions), 
+                    I have hands-on experience in technical support, system monitoring, deployments, and IT logistics. I enjoy streamlining processes, 
+                    supporting end users, and applying practical solutions to real-world IT challenges.
                 </p>
                 <p>
-                    I am highly adaptable, always eager to learn, and passionate about exploring new technologies. 
-                    My strengths include problem-solving, clear communication, 
-                    and teamwork, all of which help me contribute effectively in both academic and professional environments.
+                    I am highly adaptable, eager to grow in my career, and passionate about exploring new technologies. My strengths include problem-solving, 
+                    clear communication, and teamwork, which help me contribute effectively in both technical and collaborative environments.
                 </p>
                 <div class="about-buttons">
                     <!-- Button to Trigger Hobbies Modal -->
