add some changes

--- a/index.html
+++ b/index.html
@@ -689,14 +689,14 @@
                     <!-- Fourth Year -->
                     <div class="education-timeline-item education-timeline-right">
                         <div class="education-timeline-content">
-                            <div class="education-timeline-date">2024-Present</div>
+                            <div class="education-timeline-date">2024-2025</div>
                             <div class="education-timeline-icon">
                                 <img src="img/technological_university_dublin_logo.jpg" alt="TU Dublin Logo">
                             </div>
                             <h5 class="fw-bold">
                                 Technological University Dublin
                             </h5>
-                            <p>4th Year (September 2024 - Present)</p>
+                            <p>4th Year (September 2024 - 2025)</p>
                             <p>Bachelor of Science (Honours) Computing in IT Management</p>
                             <p>Web Development, Cloud Computing, Server Administrations, Scripting, Cybersecurity and
                                 Dev-Ops.</p>
