add some changes

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div class="navbar-flex2 text-end">
                     <button class="navbar-blackLink navbar-siteLink"
                         onclick="educationOpenModal('education-contactModal')">
-                        HIRE ME
+                        CONTACT ME
                     </button>
                 </div>
             </div>
