add some changes

--- a/index.html
+++ b/index.html
@@ -686,6 +686,29 @@
                 <div class="education-timeline">
                     <!-- Timeline Items -->
 
+                    <!-- EOS IT Solutions -->
+                    <div class="education-timeline-item education-timeline-left">
+                        <div class="education-timeline-content">
+                            <div class="education-timeline-date">2025</div>
+                            <div class="education-timeline-icon">
+                                <img src="img/EOS-Logo.jpg" alt="EOS IT Solutions Logo">
+                            </div>
+                            <h5 class="fw-bold">
+                                EOS IT Solutions @Meta
+                            </h5>
+                            <p>IT Logistics Associate - (Sep 2025 - Present) <br> (On-Site, Ballsbridge Meta Campus)</p>
+                            <p>Handling IT deployments, IT logistics, system support, and hardware replacements while supporting Meta employees across multiple teams.</p>
+                            <a href="https://eosits.com/" target="_blank" class="education-timeline-button">
+                                Learn More
+                            </a>
+                            <!-- Button to Trigger the Map Modal -->
+                            <button class="education-timeline-button"
+                                onclick="openMapModal(53.329482450042846, -6.226968118543608, '<b>Meta Campus - Ballsbridge</b><br>6 Serpentine Ave, Dublin 4, D04 H0C9, Ireland')">
+                                Location
+                            </button>
+                        </div>
+                    </div>
+
                     <!-- Fourth Year -->
                     <div class="education-timeline-item education-timeline-right">
                         <div class="education-timeline-content">
