add some changes

--- a/index.html
+++ b/index.html
@@ -157,15 +157,16 @@
             </div>
             <div class="about-text scroll-element">
                 <p>
-                    I am an IT professional with a Bachelor of Science (Honours) in Computing in Information Technology Management from Technological University Dublin. 
-                    Currently working as an IT Logistics Associate at Meta (via EOS IT Solutions), 
-                    I have hands-on experience in technical support, system monitoring, deployments, and IT logistics. I enjoy streamlining processes, 
-                    supporting end users, and applying practical solutions to real-world IT challenges.
+                    I am an IT professional with a Level 8 Bachelor of Science (Honours) degree in Computing in Information Technology Management 
+                    from Technological University Dublin. Currently, I work as an IT Logistics Associate at Meta (via EOS IT Solutions), 
+                    where I have hands-on experience in technical support, system monitoring, deployments, and IT logistics. 
+                    I am passionate about streamlining processes, supporting end users, and delivering practical solutions to real-world IT challenges.
                 </p>
                 <p>
-                    I am highly adaptable, eager to grow in my career, and passionate about exploring new technologies. My strengths include problem-solving, 
-                    clear communication, and teamwork, which help me contribute effectively in both technical and collaborative environments.
-                </p>
+                    I am highly adaptable, eager to grow in my career, and enthusiastic about exploring new technologies. 
+                    My strengths include problem-solving, clear communication, and teamwork, enabling me to contribute effectively 
+                    in both technical and collaborative environments.
+                </p>                
                 <div class="about-buttons">
                     <!-- Button to Trigger Hobbies Modal -->
                     <button type="button" class="btn btn-primary"
