add some changes

--- a/index.html
+++ b/index.html
@@ -1096,15 +1096,15 @@
                     <!-- First Care -->
                     <div class="education-timeline-item education-timeline-left">
                         <div class="education-timeline-content">
-                            <div class="education-timeline-date">2012</div>
+                            <div class="education-timeline-date">2016</div>
                             <div class="education-timeline-icon">
                                 <img src="img/firstcare_ireland_logo.jpg" alt="First Care Ireland">
                             </div>
                             <h5 class="fw-bold">
                                 First-Care Ireland
                             </h5>
-                            <p>Patient Care Assistant (Mar 2012 - June 2019) (On-Site)</p>
-                            <p>Communications and Team Work</p>
+                            <p>Healthcare Professional (April 2015 - June 2019) (On-Site)</p>
+                            <p>Communications, Attention to details and Team Work</p>
                         </div>
                     </div>
                 </div>
