add some changes

--- a/index.html
+++ b/index.html
@@ -795,8 +795,7 @@
                                 Typetec Ltd
                             </h5>
                             <p>Intern Technical Support Engineer - (Jan 2024 - Jul 2024) <br> (On-Site)</p>
-                            <p>IT Desktop Support, Cybersecurity Monitoring, Software Installations and Server
-                                Administrations.</p>
+                            <p>IT Technical Support, IT Software/Hardware Installations and Server Administrations.</p>
                             <a href="https://www.typetec.ie//" target="_blank" class="education-timeline-button">
                                 Learn More
                             </a>
@@ -817,7 +816,7 @@
                             </div>
                             <h5 class="fw-bold">KKR</h5>
                             <p>Intern IT Support - (Jun 2024 - Jul 2024) (On - Site)</p>
-                            <p>On-Site IT Support, Hardware Installations, Network Monitoring and Troubleshooting.</p>
+                            <p>On-Site IT Support, Hardware Installations, and Troubleshooting.</p>
                             <a href="https://www.kkr.com/" target="_blank" class="education-timeline-button">
                                 Learn More
                             </a>
