add some changes

--- a/index.html
+++ b/index.html
@@ -795,7 +795,7 @@
                                 Typetec Ltd
                             </h5>
                             <p>Intern Technical Support Engineer - (Jan 2024 - Jul 2024) <br> (On-Site)</p>
-                            <p>IT Technical Support, IT Software/Hardware Installations and Server Administrations.</p>
+                            <p>Remote IT Support, IT Software/Hardware Installations and Server Administrations.</p>
                             <a href="https://www.typetec.ie//" target="_blank" class="education-timeline-button">
                                 Learn More
                             </a>
