--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 <p>
                     I am an IT professional with a Level 8 Bachelor of Science (Honours) degree in Computing in Information Technology Management 
                     from Technological University Dublin. Currently, I work as an IT Logistics Associate at Meta (via EOS IT Solutions), 
-                    where I have hands-on experience in IT technical support, system monitoring, software and hardware Installations,deployments, and IT logistics. 
+                    where I have hands-on experience in IT technical support, system monitoring, software and hardware Installations, IT deployments, and IT logistics. 
                     I am passionate about streamlining processes, supporting end users, and delivering practical solutions to real-world IT challenges.
                 </p>
                 <p>
