add some changes

--- a/index.html
+++ b/index.html
@@ -157,15 +157,15 @@
             </div>
             <div class="about-text scroll-element">
                 <p>
-                    I am an IT professional with a Level 8 Bachelor of Science (Honours) degree in Computing in Information Technology Management 
-                    from Technological University Dublin. Currently, I work as an IT Logistics Associate at Meta (via EOS IT Solutions), 
-                    where I have hands-on experience in IT technical support, system monitoring, software and hardware Installations, IT deployments, and IT logistics. 
+                    I am an IT professional with a Level 8 Bachelor of Science (Honours) degree in Computing in 
+                    Information Technology Management from Technological University Dublin. Currently, I work as an IT Logistics Associate at Meta (via EOS IT Solutions), 
+                    where I have hands-on experience in IT technical support, system monitoring, software and hardware installations, IT deployments, and logistics. 
                     I am passionate about streamlining processes, supporting end users, and delivering practical solutions to real-world IT challenges.
                 </p>
                 <p>
                     I am highly adaptable, eager to grow in my career, and enthusiastic about exploring new technologies. 
-                    My strengths include problem-solving, clear communication, and teamwork, enabling me to contribute effectively 
-                    in both technical and collaborative environments.
+                    My strengths include problem-solving, clear communication, 
+                    and teamwork, which enable me to contribute effectively in both technical and collaborative environments.
                 </p>                
                 <div class="about-buttons">
                     <!-- Button to Trigger Hobbies Modal -->
